0.6.0 (currently working on)
- [#1314] Fix: tx_seminars_organizers.email shouldn't be an exclude field
- [#1311] Change: Sort the time slots relations in the event record form by the begin date of the time slots
- [#946] Change: Require TYPO3 4.1.2
- [#1208, #1209, #1210] Feature: Added new Selector Widget to the list view
- [#1205] Feature: Added Italian translation by Mauro Lorenzutti
- [#1028] Feature: When a user unregisters, inform the user, organizers and new attendee via e-mail
- [#1225] Fix: Missing empty line in confirmation mail
- [#1207] Change: Add country to location records
- [#1206] Change: Added language to event records
- [#1060] Fix: Wrong error message on "my VIP events" list if not logged in
- [#1228] Fix: The fax number doesn't have a label in the notification e-mails
- [#779] Change: Use labels for different saluations for "How have you heard of this event?"
- [#1037] Provide a German tutorial/manual
- [#1195] Fix: List view column "list of registrations" is visible in the "subsequent events" list
- [#1176] Fix: ext_emconf: typo3 can only be in the requirements, not in the suggestions
- [#1030] Feature: Show the current number of people on the registration queue
- [#1032] Change: Handle people that are on the waiting list
- [#1029] Feature: When a user unregisters, make the first person in the queue a regular attendee
- [#1031] Feature: Registration queue: Users should be able to sign up for full-booked events if there are still vacancies in the waiting list
- [#636] Change: Remove surplus empty parameters from exec_SELECTquery calls, patch by Saskia Metzler
- [#903] Change: Add scope="col" to TH elements in the list view, patch by Saskia Metzler
- [#412] Change: Use the config getter instead of the registration manager in pi1::searchWhere to retrieve configuration data from plugin.tx_seminars
- [#1170] Change: Switch the order of the buttons on the unregistration page
- [#1179] Change: Move isUnregistrationPossible() to tx_seminars_seminar