@@ -1,4 +1,5 @@
 0.6.0 (currently working on)
+- [#1180] Feature: Modify tx_seminars_objectfromdb::getRecordIcon() so it returns hidden and timed icons
 - [#1314] Fix: tx_seminars_organizers.email shouldn't be an exclude field
 - [#1311] Change: Sort the time slots relations in the event record form by the begin date of the time slots
 - [#946] Change: Require TYPO3 4.1.2
